About page css overflow issues fixed

--- a/template-1/about/files/scss/about.scss
+++ b/template-1/about/files/scss/about.scss
@@ -26,7 +26,7 @@
        padding-left: 50px;
        
        @media (max-width: 767px) {
-            padding-left: 0px;
+            padding-left: 15px;
         }
 
        h3 {
@@ -89,6 +89,11 @@
         img {
             height: 350px;
             object-fit: cover;
+
+            @media (max-width: 991px) {
+                width: 100%;
+                margin-bottom: 45px;
+            }
         }
     }
 
